--- a/scripts/checkout.html
+++ b/scripts/checkout.html
@@ -5,8 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart | Better Juice</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/better-juice/css/styles.css">
+    <a href="https://www.flaticon.com/free-icons/profile" title="profile icons"></a>
+    <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
 <body>
-    
+    <a class="mainLogo" href="/better-juice/scripts/index.html"> <img src="/better-juice/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
+<div class="topnav">
+    <a href="/better-juice/scripts/index.html"  > Home </a>
+    <a href="/better-juice/scripts/shop.html"> Shop </a>
+    <a href="" class="split"> <img src="/better-juice/Images/search.png" alt="Search" </a>
+    <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout" </a>
+    <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile" > </a>
+</div>
+<header>  
+    <div class="promotion">
+        <p>10% off all orders $25+ |<span>  code: YU23AD</span></p>
+    </div>
+<h1>Your Cart</h1>
+</header>
+<div class="cartLayout">
+    <div class="cartItem">
+        <div class="cartImage">
+            <img src="/better-juice/Images/green-bottle.JPG" height="420" width="327">
+        </div>
+        <div class="cartInfo">
+            <div class="itemTitle">
+                <h2>Cucumber Celery Juice</h2>
+            </div>
+            <div class="cartProduct-size">
+                <button type="cartbutton">8oz</button>
+                <span class="cartButtonLabel">$6.29</span>
+            </div>
+        </div>
+    </div>
+    <div class="cartItem">
+        <div class="cartImage">
+            <img src="/better-juice/Images/green-bottle.JPG" height="420" width="327">
+        </div>
+        <div class="cartInfo">
+            <div class="itemTitle">
+                <h2>Cucumber Celery Juice</h2>
+            </div>
+            <div class="cartProduct-size">
+                <button type="cartbutton">8oz</button>
+                <span class="cartButtonLabel">$6.29</span>
+            </div>
+        </div>
+        <div class="checkout">
+            <h3>Subtotal</h3>
+            
+        </div>
+    </div>
+</div>
 </body>
 </html>
