"Index images - Completed Checkout and Shop"

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -10,29 +10,115 @@
     <link rel="stylesheet" href="/better-juice/css/styles.css">
     <a href="https://www.flaticon.com/free-icons/profile" title="profile icons"></a>
     <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
-
 </head>
-<body>
+<body class="index">
     <a class="mainLogo" href="/better-juice/scripts/index.html"> <img src="/better-juice/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
 <div class="topnav">
-    <a href="/better-juice/scripts/index.html"> Home </a>
+    <a href="/better-juice/scripts/index.html"  > Home </a>
     <a href="/better-juice/scripts/shop.html"> Shop </a>
     <a href="" class="split"> <img src="/better-juice/Images/search.png" alt="Search" </a>
     <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout" </a>
     <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile" > </a>
 </div>
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="/better-juice/Images/combinations.JPG" alt="First slide">
+<header class="promotion">
+  <p>15% off all orders $25+ | code:<span>   YU23AD</span></p>
+</header>
+  <div class="newStuff">
+    <img class="comingSoon" src="/better-juice/Images/new.png">
+    <div class="newMenu">
+      <div class="fruitJuice">
+      <li>
+        <img src="/better-juice/Images/fruitJuice.JPG">
+        <div class="flavors">
+      </li>
+      <li>
+      <ol class="flavors">
+        <h3>Fruit Juices</h3>
+        <li>Strawberry Basil</li>
+        <li>Pineapple Apple Ginger</li>
+        <li>Grapefruit Mint</li>
+        <li>Blood Orange</li>
+      </ol>
+      </li>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="" alt="Second slide">
+      <div class="announcement">
+        <p> Here at Better Juice, we pride ourselves on delivering the best products to our customers. 
+          This season, we're adding fruit juices and wellness shots to the menu.</p> 
+        <p>With these new additions, our menu is sure to satisfy your summer cravings for delicious and healthy fresh juices!</p>
+        <p>Don't miss out on these delicious, mouthwatering treats, available exclusively on our website. </p>
+        <p>Cheers to a juicy summer!</p>    
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Third slide">
+
+      <div class="wellnessShots">
+      <li>
+        <img src="/better-juice/Images/wellnessShots2.JPG">
+      </li>
+      <ol class="flavors">
+        <h3>Wellness Shots</h3>
+        <li>Ginger Lemon Cayenne</li>
+        <li>Turmeric Orange</li>
+        <li>Apple Lemon Matcha</li>
+        <li>Pineapple ACV</li>
+      </ol>
+      </li>
       </div>
     </div>
   </div>
+  <hr>
+  <div class="mission">
+    <h1>Our Mission</h1>
+    <p>Hi there, I'm Tatiana, the founder of Better Juice. I started this business 
+      out of my passion for healthy living and my love of fresh, delicious juice. As someone who has struggled 
+      with health issues in the past, I know how important it is to fuel our bodies with nutritious foods. 
+      That's why I'm dedicated to providing my customers with the highest quality, organic fruits and vegetables 
+      that are carefully selected and cold-pressed to preserve their natural goodness.
+
+      <p>At Better Juice, we believe that good health should be accessible to everyone. 
+        That's why we're committed to making our products affordable and sustainable, without sacrificing taste 
+        or nutritional value. We source our ingredients locally whenever possible, and we work with farmers who 
+        share our values of sustainability and ethical farming practices. We're proud to be a part of the growing 
+        movement towards healthier, more sustainable lifestyles, and we're excited to share our passion for fresh juice with you. 
+        Thank you for choosing better Juice, and we look forward to serving you!</p>
+  </div>
+  <hr>
+<div class="menu">
+  <h2>Menu</h2> 
+  <div class="menu-img">
+    <a href="shop.html"> <img src="/better-juice/Images/greenJuice.jpg"style="
+      max-width: 30vw;">Green Juices</a>
+    <a href="shop.html"> <img src="/better-juice/Images/lemonades.jpg"style="
+      max-width: 30vw;">Lemonades</a>
+    <a href="shop.html"> <img src="/better-juice/Images/smoothies.jpg"style="
+      max-width: 30vw;">Smoothies</a>
+  </div>
+</div>
 </body>
+<!--<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Download the App</h3>
+        <a> <img src="/better-juice/Images/download.png" class="download"> </a>
+      </div>
+      <div class="col-md-4">
+        <h3>Contact Us</h3>
+        <p>123 Main Street<br>Anytown, USA 12345<br>Phone: (123) 456-7890<br>Email: info@example.com</p>
+      </div>
+      <div class="col-md-4">
+        <h3>Stay Connected</h3>
+        <ul class="social-list">
+          <li>
+              <img src="/better-juice/Images/twitter.jpg" alt="Twitter Icon" width="45">
+          </li>
+          <li>
+              <img src="/better-juice/Images/facebook.png" alt="Facebook Icon" width="45">
+          </li>
+          <li>
+              <img src="/better-juice/Images/instagram.png" alt="Instagram Icon" width="45">
+          </li>
+        </ul>      
+      </div>
+    </div>
+  </div>  
+</footer>-->
 </html>
