--- a/scripts/shop.html
+++ b/scripts/shop.html
@@ -20,13 +20,87 @@
             <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout" </a>
             <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile" > </a>
         </div>
-    <br><br>
-    <header>    
+    <header>  
+        <div class="promotion">
+            <p>15% off all orders $25+ |<span>  code: YU23AD</span></p>
+        </div>
         <h1>Cold-Pressed Juices</h1>
     </header>
+   <!-- <h2 class="subtitle">Green Juices</h2>
+        <div class="content">
+            <div class="row"></div>
+            <div class="greenJuice">
+            <li>
+              <img src="/better-juice/Images/cucumberCelery.JPG"
+            <ul class="flavors">
+              <h3>Cucumber Celery</h3>
+              <p>Cucumber Juice, Celery Juice, Apple Juice, Lemon Juice, Ginger Juice </p>
+            </ul>
+      <div class="product-info">
+              <div class="product-size">
+                  <button type="button">8oz</button>
+                  <span class="buttonLabel">$6.29</span>
+              </div>
+              <div class="product-size">
+                  <button type="button">16oz</button>
+                  <span class="buttonLabel">$7.99</span>
+              </div>
+              <div class="product-price-btn">
+                  <button type="button">Add to Cart</button>
+              </div>
+          </div></li>
+            <li>
+            </li>
+            </div>
+          <div class="greenJuice">
+            <li>
+              <img src="/better-juice/images/spinachGinger.JPG">
+            <ul class="flavors">
+              <h3>Spinach Ginger</h3>
+              <li>Apple Juice, Lemon Juice, Spinach Juice, Ginger Juice, Kale Juice, Parsley </li>
+            </ul>
+            <div class="product-info"> 
+              <div class="product-size">
+                  <button type="button">8oz</button>
+                  <span class="buttonLabel">$6.29</span>
+              </div>
+              <div class="product-size">
+                  <button type="button">16oz</button>
+                  <span class="buttonLabel">$7.99</span>
+              </div>
+              <div class="product-price-btn">
+                  <button type="button">Add to Cart</button>
+              </div>
+            </div>
+        </li>
+        </div>
+        <h2 class="subtitle">Lemonade</h2>
+        <div class="lemonade">
+            <li>
+              <img src="/better-juice/images/strawberryKiwi.jpg">
+            <ul class="flavors">
+              <h3>Strawberry Kiwi</h3>
+              <p>Water, Strawberry Puree, Lemon Juice, Kiwi Juice, Monk Fruit Sweetner </p>
+            </ul>
+            <div class="product-info"> 
+              <div class="product-size">
+                  <button type="button">8oz</button>
+                  <span class="buttonLabel">$6.29</span>
+              </div>
+              <div class="product-size">
+                  <button type="button">16oz</button>
+                  <span class="buttonLabel">$7.99</span>
+              </div>
+              <div class="product-price-btn">
+                  <button type="button">Add to Cart</button>
+              </div>
+            </div>
+        </li>
+        </div>-->
+
     <div class="content">
         <div class="greenJuice">
-            <h2>Green Juice</h2>
+            <h2 class="type">Green Juice</h2>
             <div class="wrapper">
                 <div class="cucumberCelery">
                     <div class="product-img">
@@ -35,13 +109,15 @@
                     <div class="product-info">
                         <div class="product-text">
                             <h2>Cucumber Celery</h2>
-                            <p>Cucumber Juice, Celery Juice, Spinach Juice, Lemon Juice, Kale Juice, Parsley </p>
+                            <p>Cucumber Juice, Celery Juice, Apple Juice, Lemon Juice, Ginger Juice </p>
                         </div>
                         <div class="product-size">
                             <button type="button">8oz</button>
+                            <span class="buttonLabel">$6.29</span>
                         </div>
                         <div class="product-size">
                             <button type="button">16oz</button>
+                            <span class="buttonLabel">$7.99</span>
                         </div>
                         <div class="product-price-btn">
                             <button type="button">Add to Cart</button>
@@ -58,13 +134,15 @@
                     <div class="product-info">
                         <div class="product-text">
                             <h2>Spinach Ginger</h2>
-                            <p>Apple Juice, Cucumber Juice, Celery Juice, Lemon Juice, Spinach Juice, Ginger Juice, Kale Juice, Parsley</p>
+                            <p>Apple Juice, Lemon Juice, Spinach Juice, Ginger Juice, Kale Juice, Parsley</p>
                         </div>
                         <div class="product-size">
                             <button type="button">8oz</button>
+                            <span class="buttonLabel">$6.29</span>
                         </div>
                         <div class="product-size">
                             <button type="button">16oz</button>
+                            <span class="buttonLabel">$7.99</span>
                         </div>
                         <div class="product-price-btn">
                             <button type="button">Add to Cart</button>
@@ -73,8 +151,9 @@
                 </div>
             </div>
         </div>
+        <br>
+    <h2 class="type">Lemonade</h2>
     <div class="lemonade">
-        <h2>Lemonade</h2>
         <div class="wrapper">
             <div class="strawberryKiwi">
                 <div class="product-img">
@@ -87,10 +166,12 @@
                     </div>
                     <div class="product-size">
                         <button type="button">8oz</button>
+                        <span class="buttonLabel">$6.29</span>
                     </div>
                     <div class="product-size">
                         <button type="button">16oz</button>
-                    </div>
+                        <span class="buttonLabel">$7.99</span>
+                </div>
                     <div class="product-price-btn">
                         <button type="button">Add to Cart</button>
                     </div>
@@ -111,10 +192,65 @@
                     </div>
                     <div class="product-size">
                         <button type="button">8oz</button>
+                        <span class="buttonLabel">$6.29</span>
                     </div>
                     <div class="product-size">
                         <button type="button">16oz</button>
+                        <span class="buttonLabel">$7.99</span>
+                </div>
+                        <div class="product-price-btn">
+                            <button type="button">Add to Cart</button>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="smoothies">
+        <h2 class="type">Smoothies</h2>
+        <div class="wrapper">
+            <div class="caribbeanPassion">
+                <div class="product-img">
+                    <img src="/better-juice/Images/caribbeanPassion.jpg" height="420" width="327">
+                </div>
+                <div class="product-info">
+                    <div class="product-text">
+                        <h2>caribbean Passion</h2>
+                        <p>pear, mango, orange, passionfruit juice, 
+                            orange sherbet, strawberries, peaches</p>
                     </div>
+                    <div class="product-size">
+                        <button type="button">8oz</button>
+                        <span class="buttonLabel">$6.29</span>
+                    </div>
+                    <div class="product-size">
+                        <button type="button">16oz</button>
+                        <span class="buttonLabel">$7.99</span>
+                </div>
+                    <div class="product-price-btn">
+                        <button type="button">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="wrapper">
+            <div class="pineappleTwist">
+                <div class="product-img">
+                    <img src="/better-juice/Images/pineappleTwist.jpg" height="420" width="327">
+                </div>
+                <div class="product-info">
+                    <div class="product-text">
+                        <h2 class="type">Pineapple Twist</h2>
+                        <p>Pineapple, Strawberry, Mango, Ginger, Papaya Juice</p>
+                    </div>
+                    <div class="product-size">
+                        <button type="button">8oz</button>
+                        <span class="buttonLabel">$6.29</span>
+                    </div>
+                    <div class="product-size">
+                        <button type="button">16oz</button>
+                        <span class="buttonLabel">$7.99</span>
+                </div>
                         <div class="product-price-btn">
                             <button type="button">Add to Cart</button>
                         </div>
