--- a/scripts/registration.html
+++ b/scripts/registration.html
@@ -4,9 +4,91 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/better-juice/css/styles.css">
+    <a href="https://www.flaticon.com/free-icons/profile" title="profile icons"></a>
+    <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <a class="mainLogo" href="/better-juice/scripts/index.html"> <img src="/better-juice/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
+        <div class="topnav">
+            <a href="/better-juice/scripts/index.html"> Home </a>
+            <a href="/better-juice/scripts/shop.html"> Shop </a>
+            <a href="" class="split"> <img src="/better-juice/Images/search.png" alt="Search" </a>
+            <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout" </a>
+            <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile" > </a>
+        </div>
+    </header>
+    <h1 class="registration">Create Account</h1>
+    <form class="newAccount">
+          <div class="form-floating mb-3">
+            <input type="fName" class="form-control" id="floatingInput" placeholder="First name">
+            <label for="floatingInput">First Name</label>
+          </div>
+          <div class="form-floating">
+            <input type="lName" class="form-control" id="floatingLname" placeholder="Last name">
+            <label for="floatingLname">Last Name</label>
+          </div>
+        </div>
+        <br>
+            <div class="form-row">
+              <div class="form-floating">
+                <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
+                <label for="floatingEmail">Email</label>
+            </div>
+              <br>
+              <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+              </div>
+              <br>
+              <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Confirm Password">
+                <label for="floatingPassword">Confirm Password</label>
+              </div>
+
+            </div>
+            <br>
+            <div class="radio">
+                <fieldset class="form-group">
+                    <div class="row">
+                    <legend class="col-form-label">How did you hear about us?</legend>
+                    <div class="col">
+                        <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                        <label class="form-check-label" for="gridRadios1">Search Engine</label>
+                        </div>
+                        <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                        <label class="form-check-label" for="gridRadios2">Social Media</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                            <label class="form-check-label" for="gridRadios2">Radio</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                            <label class="form-check-label" for="gridRadios2">Referral</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                            <label class="form-check-label" for="gridRadios2">Other</label>
+                        </div>
+                    </div>
+                        <div class= "col-4">
+                            <button type="submit" class="btn btn-dark">Submit</button>
+                        </div>
+                    </div>
+                </fieldset>
+                <br>
+                <div class= "row">
+                  <a role="button" class="btn btn-outline-dark" href="/better-juice/scripts/login.html" >Already Have An Account</a>
+              </div>
+            </div>
+      </form>
+      <br><br><br>
 </body>
 </html>
