"Minimal W3C error fixes"

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -17,7 +17,7 @@
     <a href="/better-juice/scripts/index.html"  > Home </a>
     <a href="/better-juice/scripts/shop.html"> Shop </a>
     <a href="" class="split"> <img src="/better-juice/Images/search.png" alt="Search" </a>
-    <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout" </a>
+    <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout"> </a>
     <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile" > </a>
 </div>
 <header class="promotion">
@@ -89,8 +89,8 @@
     <a href="shop.html"> <img src="/better-juice/Images/lemonades.jpg"style="
       max-width: 30vw;">Lemonades</a>
     <a href="shop.html"> <img src="/better-juice/Images/smoothies.jpg"style="
-      max-width: 30vw;">Smoothies</a>
-  </div>
+      max-width: 30vw;">Smoothies</a>  
+</div>
 </div>
 </body>
 <!--<footer>
