--- a/scripts/login.html
+++ b/scripts/login.html
@@ -18,9 +18,9 @@
     <div class="topnav">
         <a href="/better-juice/scripts/index.html"> Home </a>
         <a href="/better-juice/scripts/shop.html"> Shop </a>
-        <a href="" class="split"> <img src="/better-juice/Images/search.png" alt="Search" </a>
-        <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout" </a>
-        <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile" > </a>
+        <a href="" class="split"> <img src="/better-juice/Images/search.png" alt="Search"> </a>
+        <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout"> </a>
+        <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile"> </a>
     </div>
 </header>
         <h1 class="login">Welcome!</h1>
