"README with Page Screenshots"

--- a/scripts/login.html
+++ b/scripts/login.html
@@ -27,12 +27,12 @@
         <form class="existingAcc">
                 <div class="form-row">
                     <div class="form-floating">
-                      <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
+                      <input type="email" class="form-control" id="floatingEmail" placeholder="Email" required>
                       <label for="floatingEmail">Email</label>
                   </div>
                     <br>
                     <div class="form-floating">
-                      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
                       <label for="floatingPassword">Password</label>
                     </div>
                     <br>
