--- a/scripts/registration.html
+++ b/scripts/registration.html
@@ -25,28 +25,28 @@
     <h1 class="registration">Create Account</h1>
     <form class="newAccount">
           <div class="form-floating mb-3">
-            <input type="fName" class="form-control" id="floatingInput" placeholder="First name">
+            <input type="fName" class="form-control" id="floatingInput" placeholder="First name" required>
             <label for="floatingInput">First Name</label>
           </div>
           <div class="form-floating">
-            <input type="lName" class="form-control" id="floatingLname" placeholder="Last name">
+            <input type="lName" class="form-control" id="floatingLname" placeholder="Last name" required>
             <label for="floatingLname">Last Name</label>
           </div>
         </div>
         <br>
             <div class="form-row">
               <div class="form-floating">
-                <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
+                <input type="email" class="form-control" id="floatingEmail" placeholder="Email" required>
                 <label for="floatingEmail">Email</label>
             </div>
               <br>
               <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
                 <label for="floatingPassword">Password</label>
               </div>
               <br>
               <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Confirm Password">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Confirm Password" required>
                 <label for="floatingPassword">Confirm Password</label>
               </div>
 
