--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <title>Home | Better Juice</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/better-juice/css/styles.css">
+    <link rel="stylesheet" href="/css/style.css">
     <a href="https://www.flaticon.com/free-icons/profile" title="profile icons"></a>
     <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
 <body class="index">
-    <a class="mainLogo" href="/better-juice/scripts/index.html"> <img src="/better-juice/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
+    <a class="mainLogo" href="/index.html"> <img src="/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
 <div class="topnav">
-    <a href="/better-juice/scripts/index.html"  > Home </a>
-    <a href="/better-juice/scripts/shop.html"> Shop </a>
-    <a href="" class="split"> <img src="/better-juice/Images/search.png" alt="Search" </a>
-    <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout"> </a>
-    <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile" > </a>
+    <a href="/index.html"  > Home </a>
+    <a href="/shop.html"> Shop </a>
+    <a href="" class="split"> <img src="/Images/search.png" alt="Search" </a>
+    <a href="/checkout.html" class="split"> <img src="/Images/cart.png" alt="Checkout"> </a>
+    <a href="/login.html" class="split"> <img src="/Images/profile.png" alt="Profile" > </a>
 </div>
 <header class="promotion">
   <p>15% off all orders $25+ | code:<span>   YU23AD</span></p>
 </header>
   <div class="newStuff">
-    <img class="comingSoon" src="/better-juice/Images/new.png">
+    <img class="comingSoon" src="/Images/new.png">
     <div class="newMenu">
       <div class="fruitJuice">
       <li>
-        <img src="/better-juice/Images/fruitJuice.JPG">
+        <img src="/Images/fruitJuice.JPG">
         <div class="flavors">
       </li>
       <li>
@@ -51,7 +51,7 @@
 
       <div class="wellnessShots">
       <li>
-        <img src="/better-juice/Images/wellnessShots2.JPG">
+        <img src="/Images/wellnessShots2.JPG">
       </li>
       <ol class="flavors">
         <h3>Wellness Shots</h3>
@@ -84,11 +84,11 @@
 <div class="menu">
   <h2>Menu</h2> 
   <div class="menu-img">
-    <a href="shop.html"> <img src="/better-juice/Images/greenJuice.jpg"style="
+    <a href="shop.html"> <img src="/Images/greenJuice.jpg"style="
       max-width: 30vw;">Green Juices</a>
-    <a href="shop.html"> <img src="/better-juice/Images/lemonades.jpg"style="
+    <a href="shop.html"> <img src="/Images/lemonades.jpg"style="
       max-width: 30vw;">Lemonades</a>
-    <a href="shop.html"> <img src="/better-juice/Images/smoothies.jpg"style="
+    <a href="shop.html"> <img src="/Images/smoothies.jpg"style="
       max-width: 30vw;">Smoothies</a>  
 </div>
 </div>
@@ -98,7 +98,7 @@
     <div class="row">
       <div class="col-md-4">
         <h3>Download the App</h3>
-        <a> <img src="/better-juice/Images/download.png" class="download"> </a>
+        <a> <img src="/Images/download.png" class="download"> </a>
       </div>
       <div class="col-md-4">
         <h3>Contact Us</h3>
@@ -108,13 +108,13 @@
         <h3>Stay Connected</h3>
         <ul class="social-list">
           <li>
-              <img src="/better-juice/Images/twitter.jpg" alt="Twitter Icon" width="45">
+              <img src="/Images/twitter.jpg" alt="Twitter Icon" width="45">
           </li>
           <li>
-              <img src="/better-juice/Images/facebook.png" alt="Facebook Icon" width="45">
+              <img src="/Images/facebook.png" alt="Facebook Icon" width="45">
           </li>
           <li>
-              <img src="/better-juice/Images/instagram.png" alt="Instagram Icon" width="45">
+              <img src="/Images/instagram.png" alt="Instagram Icon" width="45">
           </li>
         </ul>      
       </div>
