--- a/registration.html
+++ b/registration.html
@@ -7,19 +7,19 @@
     <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/better-juice/css/styles.css">
+    <link rel="stylesheet" href="/css/style.css">
     <a href="https://www.flaticon.com/free-icons/profile" title="profile icons"></a>
     <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a class="mainLogo" href="/better-juice/scripts/index.html"> <img src="/better-juice/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
+        <a class="mainLogo" href="/index.html"> <img src="/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
         <div class="topnav">
-            <a href="/better-juice/scripts/index.html"> Home </a>
-            <a href="/better-juice/scripts/shop.html"> Shop </a>
-            <a href="" class="split"> <img src="/better-juice/Images/search.png" alt="Search" </a>
-            <a href="/better-juice/scripts/checkout.html" class="split"> <img src="/better-juice/Images/cart.png" alt="Checkout" </a>
-            <a href="/better-juice/scripts/login.html" class="split"> <img src="/better-juice/Images/profile.png" alt="Profile" > </a>
+            <a href="/index.html"> Home </a>
+            <a href="/shop.html"> Shop </a>
+            <a href="" class="split"> <img src="/Images/search.png" alt="Search" </a>
+            <a href="/checkout.html" class="split"> <img src="/Images/cart.png" alt="Checkout" </a>
+            <a href="/login.html" class="split"> <img src="/Images/profile.png" alt="Profile" > </a>
         </div>
     </header>
     <h1 class="registration">Create Account</h1>
@@ -85,7 +85,7 @@
                 </fieldset>
                 <br>
                 <div class= "row">
-                  <a role="button" class="btn btn-outline-dark" href="/better-juice/scripts/login.html" >Already Have An Account</a>
+                  <a role="button" class="btn btn-outline-dark" href="/login.html" >Already Have An Account</a>
               </div>
             </div>
       </form>
