Image file paths

--- a/checkout.html
+++ b/checkout.html
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
 <body>
-    <a class="mainLogo" href="/index.html"> <img src="/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
+    <a class="mainLogo" href="index.html"> <img src="images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
 <div class="topnav">
-    <a href="/index.html"  > Home </a>
+    <a href="index.html"  > Home </a>
     <a href="/shop.html"> Shop </a>
-    <a href="" class="split"> <img src="/Images/search.png" alt="Search" </a>
-    <a href="/checkout.html" class="split"> <img src="/Images/cart.png" alt="Checkout" </a>
-    <a href="/login.html" class="split"> <img src="/Images/profile.png" alt="Profile" > </a>
+    <a href="" class="split"> <img src="images/search.png" alt="Search" </a>
+    <a href="/checkout.html" class="split"> <img src="images/cart.png" alt="Checkout" </a>
+    <a href="/login.html" class="split"> <img src="images/profile.png" alt="Profile" > </a>
 </div>
 <header>  
     <div class="promotion">
@@ -237,7 +237,7 @@
 <div class="cartLayout">
     <div class="cartItem">
         <div class="cartImage">
-            <img src="/Images/cucumberCelery.JPG" height="420" width="327">
+            <img src="images/cucumberCelery.JPG" height="420" width="327">
         </div>
         <div class="cartInfo">
             <div class="itemTitle">
@@ -251,7 +251,7 @@
     </div>
     <div class="cartItem">
         <div class="cartImage">
-            <img src="/Images/strawberryKiwi.jpg" height="420" width="327">
+            <img src="images/strawberryKiwi.jpg" height="420" width="327">
         </div>
         <div class="cartInfo">
             <div class="itemTitle">
@@ -264,7 +264,7 @@
         </div>
         <div class="cartItem">
             <div class="cartImage">
-                <img src="/Images/mangoGinger.jpg" height="420" width="327">
+                <img src="images/mangoGinger.jpg" height="420" width="327">
             </div>
             <div class="cartInfo">
                 <div class="itemTitle">
