--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
 <body class="index">
-    <a class="mainLogo" href="/index.html"> <img src="/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
+    <a class="mainLogo" href="index.html"> <img src="images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
 <div class="topnav">
-    <a href="/index.html"  > Home </a>
+    <a href="index.html"  > Home </a>
     <a href="/shop.html"> Shop </a>
-    <a href="" class="split"> <img src="/Images/search.png" alt="Search" </a>
-    <a href="/checkout.html" class="split"> <img src="/Images/cart.png" alt="Checkout"> </a>
-    <a href="/login.html" class="split"> <img src="/Images/profile.png" alt="Profile" > </a>
+    <a href="" class="split"> <img src="images/search.png" alt="Search" </a>
+    <a href="/checkout.html" class="split"> <img src="images/cart.png" alt="Checkout"> </a>
+    <a href="/login.html" class="split"> <img src="images/profile.png" alt="Profile" > </a>
 </div>
 <header class="promotion">
   <p>15% off all orders $25+ | code:<span>   YU23AD</span></p>
 </header>
   <div class="newStuff">
-    <img class="comingSoon" src="/Images/new.png">
+    <img class="comingSoon" src="images/new.png">
     <div class="newMenu">
       <div class="fruitJuice">
       <li>
-        <img src="/Images/fruitJuice.JPG">
+        <img src="images/fruitJuice.JPG">
         <div class="flavors">
       </li>
       <li>
@@ -51,7 +51,7 @@
 
       <div class="wellnessShots">
       <li>
-        <img src="/Images/wellnessShots2.JPG">
+        <img src="images/wellnessShots2.JPG">
       </li>
       <ol class="flavors">
         <h3>Wellness Shots</h3>
@@ -84,11 +84,11 @@
 <div class="menu">
   <h2>Menu</h2> 
   <div class="menu-img">
-    <a href="shop.html"> <img src="/Images/greenJuice.jpg"style="
+    <a href="shop.html"> <img src="images/greenJuice.jpg"style="
       max-width: 30vw;">Green Juices</a>
-    <a href="shop.html"> <img src="/Images/lemonades.jpg"style="
+    <a href="shop.html"> <img src="images/lemonades.jpg"style="
       max-width: 30vw;">Lemonades</a>
-    <a href="shop.html"> <img src="/Images/smoothies.jpg"style="
+    <a href="shop.html"> <img src="images/smoothies.jpg"style="
       max-width: 30vw;">Smoothies</a>  
 </div>
 </div>
@@ -98,7 +98,7 @@
     <div class="row">
       <div class="col-md-4">
         <h3>Download the App</h3>
-        <a> <img src="/Images/download.png" class="download"> </a>
+        <a> <img src="images/download.png" class="download"> </a>
       </div>
       <div class="col-md-4">
         <h3>Contact Us</h3>
@@ -108,13 +108,13 @@
         <h3>Stay Connected</h3>
         <ul class="social-list">
           <li>
-              <img src="/Images/twitter.jpg" alt="Twitter Icon" width="45">
+              <img src="images/twitter.jpg" alt="Twitter Icon" width="45">
           </li>
           <li>
-              <img src="/Images/facebook.png" alt="Facebook Icon" width="45">
+              <img src="images/facebook.png" alt="Facebook Icon" width="45">
           </li>
           <li>
-              <img src="/Images/instagram.png" alt="Instagram Icon" width="45">
+              <img src="imagesinstagram.png" alt="Instagram Icon" width="45">
           </li>
         </ul>      
       </div>
