--- a/registration.html
+++ b/registration.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     <header>
-        <a class="mainLogo" href="/index.html"> <img src="/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
+        <a class="mainLogo" href="index.html"> <img src="images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
         <div class="topnav">
-            <a href="/index.html"> Home </a>
+            <a href="index.html"> Home </a>
             <a href="/shop.html"> Shop </a>
-            <a href="" class="split"> <img src="/Images/search.png" alt="Search" </a>
-            <a href="/checkout.html" class="split"> <img src="/Images/cart.png" alt="Checkout" </a>
-            <a href="/login.html" class="split"> <img src="/Images/profile.png" alt="Profile" > </a>
+            <a href="" class="split"> <img src="images/search.png" alt="Search" </a>
+            <a href="/checkout.html" class="split"> <img src="images/cart.png" alt="Checkout" </a>
+            <a href="/login.html" class="split"> <img src="images/profile.png" alt="Profile" > </a>
         </div>
     </header>
     <h1 class="registration">Create Account</h1>
