--- a/shop.html
+++ b/shop.html
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
     <body>
-        <a class="mainLogo" href="/index.html"> <img src="/Images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
+        <a class="mainLogo" href="index.html"> <img src="images/betterJuice-left.png" alt="Better Juice Official Logo"> </a>
         <div class="topnav">
-            <a href="/index.html"> Home </a>
+            <a href="index.html"> Home </a>
             <a href="/shop.html"> Shop </a>
-            <a href="" class="split"> <img src="/Images/search.png" alt="Search" </a>
-            <a href="/checkout.html" class="split"> <img src="/Images/cart.png" alt="Checkout" </a>
-            <a href="/login.html" class="split"> <img src="/Images/profile.png" alt="Profile" > </a>
+            <a href="" class="split"> <img src="images/search.png" alt="Search" </a>
+            <a href="/checkout.html" class="split"> <img src="images/cart.png" alt="Checkout" </a>
+            <a href="/login.html" class="split"> <img src="images/profile.png" alt="Profile" > </a>
         </div>
     <header>  
         <div class="promotion">
@@ -32,7 +32,7 @@
             <div class="wrapper">
                 <div class="cucumberCelery">
                     <div class="product-img">
-                        <img src="/Images/cucumberCelery.JPG" height="420" width="327">
+                        <img src="images/cucumberCelery.JPG" height="420" width="327">
                     </div>
                     <div class="product-info">
                         <div class="product-text">
@@ -57,7 +57,7 @@
             <div class="wrapper">
                 <div class="spinachGinger">
                     <div class="product-img">
-                        <img src="/Images/spinachGinger.JPG" height="420" width="327">
+                        <img src="images/spinachGinger.JPG" height="420" width="327">
                     </div>
                     <div class="product-info">
                         <div class="product-text">
@@ -85,7 +85,7 @@
         <div class="wrapper">
             <div class="strawberryKiwi">
                 <div class="product-img">
-                    <img src="/Images/strawberryKiwi.jpg" height="420" width="327">
+                    <img src="images/strawberryKiwi.jpg" height="420" width="327">
                 </div>
                 <div class="product-info">
                     <div class="product-text">
@@ -110,7 +110,7 @@
         <div class="wrapper">
             <div class="mangoGinger">
                 <div class="product-img">
-                    <img src="/Images/mangoGinger.jpg" height="420" width="327">
+                    <img src="images/mangoGinger.jpg" height="420" width="327">
                 </div>
                 <div class="product-info">
                     <div class="product-text">
@@ -138,7 +138,7 @@
         <div class="wrapper">
             <div class="caribbeanPassion">
                 <div class="product-img">
-                    <img src="/Images/caribbeanPassion.jpg" height="420" width="327">
+                    <img src="images/caribbeanPassion.jpg" height="420" width="327">
                 </div>
                 <div class="product-info">
                     <div class="product-text">
@@ -164,7 +164,7 @@
         <div class="wrapper">
             <div class="pineappleTwist">
                 <div class="product-img">
-                    <img src="/Images/pineappleTwist.jpg" height="420" width="327">
+                    <img src="images/pineappleTwist.jpg" height="420" width="327">
                 </div>
                 <div class="product-info">
                     <div class="product-text">
